# car-price-predictor-api

./: Dockerfile  promethues.yml  pyproject.toml  requriements.txt
app/: main.py
app/api/: routes_auth.py  routes_predict.py
app/cache/: redis_cache.py
app/core/: config.py  dependencies.py  exceptions.py  security.py
app/middleware/: logging_middleware.py
app/models/: model.joblib
app/services/: model_service.py
notebooks/: sample.ipynb
training/: train_model.py  train_utils.py
