[project]
name = "car-price-predictor-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.127.0",
    "ipykernel>=7.1.0",
    "jose>=1.0.0",
    "pandas>=2.3.3",
    "redis>=7.1.0",
    "scikit-learn>=1.8.0",
]


